package main.java.com.team1.exception;

public class DuplicateEntityException {
}
