package main.java.com.team1.model;

public abstract class Customer {
}
