@startuml

class Vehicle {
    -String id
    -String placa
    -String modelo
    -String marca
    -int ano
    -boolean disponivel
    -double precoDiaria
    +getters e setters
}

class Car
class Motorcycle
class Truck

class Agency {
    -String id
    -String nome
    -String endereco
    +getters e setters
}

class Customer {
    -String nome
    -String endereco
    -String telefone
    +getters e setters
    +getTipoCliente() String
}

class PhysicalPerson
class LegalPerson {
    -String cnpj
    +getters e setters
    +getTipoCliente() String
}

class Rental {
    -String id
    -Date dataInicio
    -Date dataFim
    -double valorTotal
    +getters e setters
}

class DataAccessObject<T> {
    <<interface>>
    +salvar(T entidade)
    +atualizar(T entidade)
    +deletar(T entidade)
    +buscarPorId(String id) T
    +listarTodos() List<T>
}

class VehicleDAO
class AgencyDAO
class CustomerDAO
class RentalDAO

class VehicleService {
    +addVehicle(Vehicle vehicle)
    +getAllVehicles()
    +searchVehicleByName(String name)
    +getVehicleByPage(int pageNumber)
}

class AgencyService {
    +addAgency(Agency agency)
    +getAllAgencies()
    +searchAgencyByName(String name)
    +getAgencyByPage(int pageNumber)
}

class CustomerService {
    +addCustomer(Customer customer)
    +getAllCustomers()
    +searchCustomerByName(String name)
    +getCustomerByPage(int pageNumber)
}

class RentalService {
    +addRental(Rental rental)
    +getAllRentals()
    +searchRentalByName(String name)
    +getRentalByPage(int pageNumber)
}

class FileUtil {
    +writeToFile(List<T> data, String fileName)
    +readFromFile(String fileName) List<T>
    +appendToFile(String content, String fileName)
    +readLines(String fileName) List<String>
}

class DateUtil {
    +formatDate(LocalDate date) String
    +parseDate(String date) LocalDate
}

class DuplicateEntityException {
    +String getMessage() String
    +String getLocalizedMessage() String
}

class EntityNotFoundException {
    +String getMessage() String
    +String getLocalizedMessage() String
}

Vehicle <|-- Car
Vehicle <|-- Motorcycle
Vehicle <|-- Truck
Customer <|-- PhysicalPerson
Customer <|-- LegalPerson
DataAccessObject <|.. VehicleDAO
DataAccessObject <|.. AgencyDAO
DataAccessObject <|.. CustomerDAO
DataAccessObject <|.. RentalDAO
Rental "1" -- "1" Vehicle
Rental "1" -- "1" Agency
Rental "1" -- "1" Customer

note right of Vehicle
    Tipos de veículos que serão considerados: Carro, Moto, Caminhões.
    Os veículos que estiverem alugados não poderão estar disponíveis.
end note

note right of Agency
    Agências não podem estar duplicadas.
end note

note right of Customer
    Clientes não podem estar duplicados.
end note

note right of Rental
    Os aluguéis e devoluções terão o local, data e horario.
    Regras de devolução:
    - Caso pessoa fisica tenha ficado com o carro mais que 5 dias terá direito a 5% de desconto.
    - Caso pessoa juridica tenha ficado com o carro mais que 3 dias terá direito a 10% de desconto.
    Valores base da diária por tipo de veículo:
    - Moto: R$ 100.00
    - Carro: R$ 150.00
    - Caminhão: R$ 200.00
end note

note right of VehicleDAO
    Os veículos não podem ser repetidos.
end note

@enduml
